--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .spinner{
-    margin-left:25%;
+    margin-left:45%;
     float: left;
 }
 #waiting{
@@ -19,16 +19,13 @@ sm-button{
     display:block;
 }
 #otp{
-    margin-left: 27%;
-}
+    margin-left: 15%;
+    margin-right: 15%;}
 .otpstyle{
     color: gray;
     font-weight: bold;
 }
-#otp1{
-    margin-left: 15%;
-    margin-right: 15%;
-}
+
 
 @media screen and (max-width:900px){
     sm-button{
@@ -40,11 +37,11 @@ sm-button{
         margin-left: 0;
     }
     .spinner{
-        margin-left:0;
+        margin-left:35%;
         float: left;
     }
     #waiting{
-        margin-left:0;
+        margin-left:10%;
         font-weight: bold;
         color: gray;
     }
