--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,13 @@ sm-button{
     font-weight: bold;
 }
 #otp2{
-    margin-left: 28%;
-    margin-right: 28%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
-
+.otpver{
+    margin-left: 20%;margin-right: 20%;
+}
 @media screen and (max-width:900px){
     sm-button{
         width:fit-content;
